--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <distributionManagement>
+        <repository>
+            <id>github</id> <!-- This id should match the id in your settings.xml -->
+            <url>https://maven.pkg.github.com/SleepyShrey/validation</url> <!-- Replace OWNER and REPOSITORY -->
+        </repository>
+    </distributionManagement>
+
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
